# Self_Projects-

./: README.md
Bang/UI/: package-lock.json  package.json
Bang/UI/src/: App.jsx
FiraAni/src/controls_map/: CMakeLists.txt  package.xml
FiraAni/src/controls_mpcc/: CMakeLists.txt  package.xml
FiraAni/src/controls_stanley/: CMakeLists.txt  package.xml
FiraAni/src/cv_only/: CMakeLists.txt
FiraAni/src/decision_making/: CMakeLists.txt
FiraAni/src/dwa_planner/: CMakeLists.txt  package.xml
FiraAni/src/dwa_planner/config/: dwa_param.yaml  robot_param.yaml
FiraAni/src/dwa_planner/include/dwa_planner/: dwa_planner.h
FiraAni/src/dwa_planner/launch/: local_planner.launch
FiraAni/src/dwa_planner/msg/: CustomMessage.msg
FiraAni/src/dwa_planner/src/: debug.py  dummygoal.py  dwa_planner.cpp  dwa_planner_node.cpp
FiraAni/src/lane_extract/: CMakeLists.txt  package.xml
FiraAni/src/sparton_ahrs8_driver/: CMakeLists.txt  README.md
FiraAni/src/sparton_ahrs8_driver/launch/: ahrs-8.launch
FiraAni/src/sparton_ahrs8_driver/scripts/: ahrs8_nmea.py
Medshield_dummy/backend/: package.json  server.js
Medshield_dummy/frontend/: package-lock.json
Medshield_dummy/uI/: package-lock.json  package.json  tailwind.config.js
Scom/backend/: server.js
Vector_Gang/frontend/: package-lock.json
Vectorify/UI/: index.html  package-lock.json  package.json
Vectorify/backend/: package-lock.json  package.json  server.js
cryptoDeck/: index.html  package-lock.json  package.json
cryptoDeck/src/: App.jsx  index.css  main.jsx
gitDec/: gitSer2.js  gitServer.js  package-lock.json  package.json
gitDec/frontend/: package-lock.json
it4/api/: .env  db.js  index.js  package-lock.json  package.json
it4/frontend/: base.html  package-lock.json  package.json
petAdoption/: package-lock.json  package.json
petAdoption/src/: App.css
(+152 files in other folders)
